2019-05-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show binary, octal, decimal, and hexadecimal result when using qalc in programming mode
	* Do not save bases and caret as xor when using qalc in programming mode

2019-05-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* For vector + scalar, add scalar to all components
	* Round bitwise right shift downwards by default (arithmetic two's complement shift)
	* Treat all non-zero values as boolean true (was positive true, non-positive false)
	* bitrot() function for bit rotation
	* Add signedness argument to bitcmp()
	* Handle decimal shift operator steps with base < 10;

2019-05-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Combine consecutive Unicode powers in one power

2019-05-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for Unicode fractions
	* Support base prefixes with input bases other than decimal

2019-05-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* -p BASE command line option for programming mode (same as -b "BASE BASE" -s "xor^") in qalc
	* Support setting both input and output base with "base" command/option in qalc
	* Do not require space between command line option and number in qalc (e.g. -b16)
	* Fix seqfault with -set command line option in qalc, for some options changing expression parsing

2019-05-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* " mod " and " rem " operators
	* Unicode support in char() and code()

2019-04-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* idivide() function
	* '%' as rem
	* "//" and "\" (if followed by space, number, +, -, ! or ~) for integer division (truncated)
	* RPN syntax support for bitwise operations
	* Allow compatible functions, variable, and functions with input base > 10

2019-04-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support Ɔ (open O) in roman numbers
	* Fixes for '|' in roman numbers
	* Support compl, bitor, and bitand as alternatives to ~, | and &
